# snippets_library

./: .gitignore  CMake.readme  CMakeLists.txt  Changelog  README.md  Readme.md  Readme.rus  Snippets.config  Snippets.files  TODO  config.c  daemon.c  fifo_lifo.c  parseargs.c  ringbuffer.c  snipplib-0.1.1.tgz  socket.c  term.c  term.h  term2.c  usefull_macros.c  usefull_macros.h  usefull_macros.pc.in
examples/: CMakeLists.txt  __template.c  clientserver.c  cmdlnopts.c  cmdlnopts.h  conffile.c  daemon.c  fifo.c  helloworld.c  options.c  ringbuffer.c
locale/ru/: messages.po  ru.po
locale/ru/LC_MESSAGES/: usefull_macros.mo
